test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-nonnil-shared.good
assign-oknil-unmanaged-from-nonnil-shared.chpl:8: error: Cannot assign to unmanaged MyClass? from shared MyClass
